[gd_scene load_steps=9 format=3 uid="uid://ct8inqcui4702"]

[ext_resource type="Script" uid="uid://dggitpxi68su5" path="res://menus/main_menu.gd" id="1_8gy84"]
[ext_resource type="Shader" uid="uid://chsq85x6lqvqu" path="res://menus/scroll_shader.gdshader" id="2_ij7vn"]
[ext_resource type="Script" uid="uid://vg8waf5rdsm7" path="res://menus/server_list.gd" id="3_yjgyn"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_yjgyn"]
shader = ExtResource("2_ij7vn")
shader_parameter/speed = 0.1
shader_parameter/dir = Vector2(1, 0)

[sub_resource type="Gradient" id="Gradient_rqbgu"]

[sub_resource type="FastNoiseLite" id="FastNoiseLite_oblsv"]

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_a63lr"]
seamless = true
color_ramp = SubResource("Gradient_rqbgu")
noise = SubResource("FastNoiseLite_oblsv")

[sub_resource type="LabelSettings" id="LabelSettings_yjgyn"]
font_size = 20
outline_size = 10
outline_color = Color(0.151276, 0.151276, 0.151276, 1)

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8gy84")

[node name="TextureRect" type="TextureRect" parent="."]
material = SubResource("ShaderMaterial_yjgyn")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("NoiseTexture2D_a63lr")

[node name="ButtonContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.401
anchor_top = 0.451
anchor_right = 0.599
anchor_bottom = 0.549
offset_left = 0.0479736
offset_top = -0.248016
offset_right = -0.0480347
offset_bottom = 0.247986
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="HostButton" type="Button" parent="ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Host"

[node name="ViewLobbies" type="Button" parent="ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "View Lobbies"

[node name="LanButtons" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.401
anchor_top = 0.559
anchor_right = 0.599
anchor_bottom = 0.657
offset_left = 0.0479431
offset_top = -0.231995
offset_right = -0.0480957
offset_bottom = 0.264008
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="LanHostButton" type="Button" parent="LanButtons"]
layout_mode = 2
size_flags_horizontal = 3
text = "Host Lan"

[node name="LanConnect" type="Button" parent="LanButtons"]
layout_mode = 2
size_flags_horizontal = 3
text = "Connect Lan"

[node name="ServerList" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.172
anchor_top = 0.185
anchor_right = 0.828
anchor_bottom = 0.815
offset_left = -0.144012
offset_top = 0.119995
offset_right = 0.143921
offset_bottom = -0.120056
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("3_yjgyn")

[node name="Title" type="Label" parent="ServerList"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.46
anchor_top = 0.037
anchor_right = 0.54
anchor_bottom = 0.093
offset_left = 0.23999
offset_top = -0.0960007
offset_right = -0.240021
offset_bottom = 0.0559998
grow_horizontal = 2
text = "Lobbies"

[node name="LobbyContainer" type="Control" parent="ServerList"]
layout_mode = 1
anchor_left = 0.177
anchor_top = 0.118
anchor_right = 0.823
anchor_bottom = 0.843
offset_left = 0.188004
offset_top = -0.144005
offset_right = -0.187988
offset_bottom = 0.0559692
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="ServerList/LobbyContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.525101, 0.525101, 0.525101, 0.419608)

[node name="LobbyScroll" type="ScrollContainer" parent="ServerList/LobbyContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="SteamLobbies" type="VBoxContainer" parent="ServerList/LobbyContainer/LobbyScroll"]
unique_name_in_owner = true
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="ServerList"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.307
anchor_top = 0.873
anchor_right = 0.693
anchor_bottom = 0.971
offset_left = -0.0920105
offset_top = -0.184021
offset_right = 0.09198
offset_bottom = -0.16803
grow_horizontal = 2
grow_vertical = 0
alignment = 1

[node name="RefreshButton" type="Button" parent="ServerList/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Refresh"

[node name="HideButton" type="Button" parent="ServerList/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Hide"

[node name="Output" type="Label" parent="." groups=["err_label"]]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 462.0
offset_bottom = -56.0
grow_horizontal = 2
grow_vertical = 2
text = "test"
label_settings = SubResource("LabelSettings_yjgyn")
horizontal_alignment = 1

[connection signal="pressed" from="ButtonContainer/HostButton" to="." method="_on_host_steam_pressed"]
[connection signal="pressed" from="ButtonContainer/ViewLobbies" to="ServerList" method="show"]
[connection signal="pressed" from="ButtonContainer/ViewLobbies" to="ServerList" method="_on_server_update"]
[connection signal="pressed" from="LanButtons/LanHostButton" to="." method="_on_host_ip_pressed"]
[connection signal="pressed" from="LanButtons/LanConnect" to="." method="_on_join_local_host"]
[connection signal="pressed" from="ServerList/HBoxContainer/RefreshButton" to="ServerList" method="_on_server_update"]
[connection signal="pressed" from="ServerList/HBoxContainer/HideButton" to="ServerList" method="hide"]
